# beri-cosplay-backend

./: main.py  pyproject.toml
app/: main.py
app/api/api_v1/: api.py
app/core/: config.py  images.py  security.py
app/crud/: costume.py  user.py
app/db/: database.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  costume.py  user.py
app/routers/: admin.py  admin_costumes.py  auth.py  costumes.py  users.py
app/schemas/: costume.py  token.py  user.py
